// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders shape is dot correctly 1`] = `
<span
  class="zs-badge zs-badge--danger zs-badge--dot"
>
  <sup
    class="zs-badge__content"
  />
</span>
`;

exports[`Badge sup 1`] = `
<span
  class="zs-badge zs-badge--danger zs-badge--dot zs-badge--sup"
>
  foo
  <sup
    class="zs-badge__content"
  />
</span>
`;

exports[`Badge text 1`] = `
<span
  class="zs-badge zs-badge--danger zs-badge--rect"
>
  <sup
    class="zs-badge__content"
  >
    99+
  </sup>
</span>
`;

exports[`Badge theme 1`] = `
<span
  class="zs-badge zs-badge--warning zs-badge--dot"
>
  <sup
    class="zs-badge__content"
  />
</span>
`;
